update application xml docs